src/objects/inscor__Form_Options__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Additional_Barcode_Fields__c</fullName>
        <inlineHelpText>Selecting the additional fields will display on label when the parts are flagged as being Hazmat, LLP, or Shelf Life.</inlineHelpText>
        <label>Additional Barcode Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hazmat?</fullName>
                </value>
                <value>
                    <fullName>LLP?</fullName>
                </value>
                <value>
                    <fullName>Shelf Life?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Barcode_Height__c</fullName>
        <inlineHelpText>Setting between 50-75</inlineHelpText>
        <label>Barcode Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Barcode_Width__c</fullName>
        <inlineHelpText>Setting between 175-200</inlineHelpText>
        <label>Barcode Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Body_1__c</fullName>
        <inlineHelpText>For Exchange Agreement Text Area above the Order/Part Number data fields.</inlineHelpText>
        <label>Body 1</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Body_2__c</fullName>
        <inlineHelpText>For Exchange Agreement Text Area below the Order/Part Number data fields.</inlineHelpText>
        <label>Body 2</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Comment_10__c</fullName>
        <label>Comment 10</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Comment_1__c</fullName>
        <label>Comment 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Comment_2__c</fullName>
        <label>Comment 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Form Options</relationshipLabel>
        <relationshipName>Form_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Footer__c</fullName>
        <label>Footer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Form_Size__c</fullName>
        <label>Form Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Form_Type__c</fullName>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barcode</fullName>
                </value>
                <value>
                    <fullName>Location Barcode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Letterhead__c</fullName>
        <inlineHelpText>Used in WO docs to override the default address setup under Administration-&gt;Company page. Works on Closeout Paperwork, Traveler, EASA Form1,and 8130.</inlineHelpText>
        <label>Letterhead</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__No_of_Barcode_Copies__c</fullName>
        <label>No of Barcode Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Show_13A_Tag_Ref__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, will default to print on Material Cert</inlineHelpText>
        <label>Show 13A Tag Ref</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Show_13A_Trace__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, will default to print on Material Cert</inlineHelpText>
        <label>Show 13A Trace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Show_ESN_on_Mat_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When selected, shows the Inventory MSN/ESN in Block 13 Remarks section of the Material Cert.</inlineHelpText>
        <label>Show ESN on Mat Cert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Use_Comment_1_as_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will make Comment 1 the default for the Material Certs in the Outbound QC Override screen</inlineHelpText>
        <label>Use Comment 1 as Default?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__VF_Reference__c</fullName>
        <label>VF Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Form Options</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Title__c</columns>
        <columns>inscor__VF_Reference__c</columns>
        <columns>inscor__Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>inscor__Barcode_Labels</fullName>
        <columns>NAME</columns>
        <columns>inscor__Title__c</columns>
        <columns>inscor__VF_Reference__c</columns>
        <columns>inscor__Company__c</columns>
        <columns>inscor__Comment_1__c</columns>
        <columns>inscor__Footer__c</columns>
        <columns>inscor__Barcode_Height__c</columns>
        <columns>inscor__Barcode_Width__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Form_Type__c</field>
            <operation>equals</operation>
            <value>Barcode,Location Barcode</value>
        </filters>
        <label>Barcode Labels</label>
    </listViews>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>